--- a/robot-brain-ui/package.json
+++ b/robot-brain-ui/package.json
@@ -5,17 +5,25 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "build:analyze": "ANALYZE=true next build",
     "start": "next start",
     "lint": "next lint",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "test:ci": "jest --ci --coverage --watchAll=false"
+    "test:ci": "jest --ci --coverage --watchAll=false",
+    "pre-deploy": "node scripts/pre-deploy-check.js",
+    "deploy": "node scripts/deploy.js",
+    "agent:checkpoint": "node ../.claude/guardrails/agent-handoff-validator.js checkpoint",
+    "agent:validate": "node ../.claude/guardrails/agent-handoff-validator.js validate",
+    "agent:verify": "node ../.claude/guardrails/verify-agent.js verify",
+    "agent:list": "node ../.claude/guardrails/verify-agent.js list"
   },
   "dependencies": {
     "@ai-sdk/react": "^2.0.0",
     "@anthropic-ai/sdk": "^0.57.0",
     "@elevenlabs/client": "^0.4.4",
+    "@elevenlabs/convai-widget-core": "^0.1.0",
     "@elevenlabs/react": "^0.4.5",
     "@google/generative-ai": "^0.24.1",
     "@neondatabase/serverless": "^1.0.1",
@@ -43,9 +51,11 @@
     "shiki": "^1.29.2",
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^15.4.5",
     "@tailwindcss/postcss": "^4",
     "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/react": "^16.3.0",
@@ -60,6 +70,7 @@
     "jest-environment-jsdom": "^30.0.5",
     "tailwindcss": "^4",
     "typescript": "^5",
+    "webpack-bundle-analyzer": "^4.10.2",
     "whatwg-fetch": "^3.6.20"
   }
 }
